force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/Contrato_de_Fornecimento_de_Insumo__c.object-meta.xml
<CustomObject>
    <label>Contrato de Fornecimento de Insumo</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratos de Fornecimento de Insumo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>