force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Assinante2__c.field-meta.xml
<CustomField>
    <fullName>Assinante2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2º Assinante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Fornecimento de Insumo (2º Assinante)</relationshipLabel>
    <relationshipName>Contratos_de_Fornecimento_de_Insumo2</relationshipName>
    <type>Lookup</type>
</CustomField>