force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Assinante__c.field-meta.xml
<CustomField>
    <fullName>Assinante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assinante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Fornecimento de Insumo</relationshipLabel>
    <relationshipName>Contratos_de_Fornecimento_de_Insumo</relationshipName>
    <type>Lookup</type>
</CustomField>