force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Catalogo_de_precos__c.field-meta.xml
<CustomField>
    <fullName>Catalogo_de_precos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catálogo de preços</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Contratos de Fornecimento de Insumo</relationshipLabel>
    <relationshipName>Contratos_de_Fornecimento_de_Insumo</relationshipName>
    <type>Lookup</type>
</CustomField>