force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Clausula_1_Editada__c.field-meta.xml
<CustomField>
    <fullName>Clausula_1_Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clausula 1 Editada</label>
    <type>Checkbox</type>
</CustomField>