force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Clausula_7__c.field-meta.xml
<CustomField>
    <fullName>Clausula_7__c</fullName>
    <label>Clausula 7</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>