force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Data_de_termino__c.field-meta.xml
<CustomField>
    <fullName>Data_de_termino__c</fullName>
    <label>Data de término</label>
    <type>Date</type>
</CustomField>