force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/idDocAutentique__c.field-meta.xml
<CustomField>
    <fullName>idDocAutentique__c</fullName>
    <label>ID do documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>