force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contratos de Fornecimento de Insumo</relationshipLabel>
    <relationshipName>Contratos_de_Fornecimento_de_Insumo</relationshipName>
    <type>Lookup</type>
</CustomField>