force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Prazo_de_vigencia__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_vigencia__c</fullName>
    <label>Prazo de vigência (meses)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>