force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Em assinatura</fullName>
            </value>
            <value>
                <fullName>Vigente</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>