force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Testemunha__c.field-meta.xml
<CustomField>
    <fullName>Testemunha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Testemunha</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Fornecimento de Insumo (Testemunha)</relationshipLabel>
    <relationshipName>Contratos_de_Fornecimento_de_Insumo1</relationshipName>
    <type>Lookup</type>
</CustomField>