force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Validador2__c.field-meta.xml
<CustomField>
    <fullName>Validador2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Pessoa referente AO CLIENTE. Deve ser preenchido apenas caso o cliente solicite que o contrato seja validado, exemplo: aprovação financeira ou jurídica DO CLIENTE.</inlineHelpText>
    <label>2º Validador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Fornecimento de Insumo (Validador 2)</relationshipLabel>
    <relationshipName>Contratos_de_Fornecimento_de_Insumo4</relationshipName>
    <type>Lookup</type>
</CustomField>