force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/fields/Valor_de_pedidos_ativos__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_pedidos_ativos__c</fullName>
    <label>Valor de pedidos ativos</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>