force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/validationRules/Acao_interna.validationRule-meta.xml
<ValidationRule>
    <fullName>Acao_interna</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Ignorar_erros__c,
ISCHANGED(Status__c),
Acao_interna__c == false,
TEXT(Status__c) == &apos;Finalizado&apos;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status é automatizado.</errorMessage>
</ValidationRule>