force-app/main/default/objects/Contrato_de_Fornecimento_de_Insumo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>StatusAssinatura__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>